ingress-yamls/gate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-oss
    kubernetes.io/tls-acme: "true"
  name: spin-gate-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: <oss-gate.opsmx.net>
    http:
      paths:
      - backend:
          service:
            name: spin-gate
            port:
              number: 8084
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - <oss-gate.opsmx.net>
    secretName: spin-gate-ingress
